fixed closing of tooltips on mobile

--- a/bm/static/css/style.css
+++ b/bm/static/css/style.css
@@ -4041,7 +4041,7 @@ span.hide-btn.right {left: auto; right: 0;}
         bottom: 0;
         z-index: 999;
         left: 0;
-        padding-bottom: 30px;
+        padding-top: 20px;
         right: 0;
         margin: 0;
         width: auto;
@@ -4049,12 +4049,15 @@ span.hide-btn.right {left: auto; right: 0;}
         border-bottom-left-radius: 0;
     }
         .add_help_inner:after {
-            content: 'Tap anywhere to close this tooltip';
+            content: '';
+            font-family: fontAwesome;
             position: absolute;
             left: auto;
             border: none;
-            bottom: 25px;
-            width: 100%;
+            bottom: auto;
+            right: 6px;
+            top: 5px;
+            width: auto;
             text-align: center;
             color: #1F3B42;
         }
